--- a/.env.heroku
+++ b/.env.heroku
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:2LnsMJfV5Kt+EiIr5ebBzbUCuwz37zk25PvDe0L1sbY=
 APP_DEBUG=true
-APP_URL=http://192.168.33.10
+APP_URL=http://todos.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
